--- a/CH39/39_11.html
+++ b/CH39/39_11.html
@@ -1,13 +1,10 @@
 <!DOCTYPE html>
 <html>
   <body>
-    <ul id="fruits">
-      <li id="apple">Apple</li>
-      <li id="banana">Banana</li>
-      <li id="orange">Orange</li>
-    </ul>
     <ul>
-      <li>HTML</li>
+      <li class="apple">Apple</li>
+      <li class="banana">Banana</li>
+      <li class="orange">Orange</li>
     </ul>
     <script>
       // class 값이 'fruit'인 요소 노드를 모두 탐색하여 HTMLCollection 객체에 담아 반환한다.
