--- a/CH39/39_11.html
+++ b/CH39/39_11.html
@@ -2,9 +2,9 @@
 <html>
   <body>
     <ul>
-      <li class="apple">Apple</li>
-      <li class="banana">Banana</li>
-      <li class="orange">Orange</li>
+      <li class="fruit apple">Apple</li>
+      <li class="fruit banana">Banana</li>
+      <li class="fruit orange">Orange</li>
     </ul>
     <script>
       // class 값이 'fruit'인 요소 노드를 모두 탐색하여 HTMLCollection 객체에 담아 반환한다.
