--- a/CH39/39_36.html
+++ b/CH39/39_36.html
@@ -9,6 +9,7 @@
 
     // 2. nodeValue 프로퍼티를 사용하여 텍스트 노드의 값을 변경한다.
     $textNode.nodeValue = "World";
-    console.log($textNode.nodeValue); // Hello
+
+    console.log($textNode.nodeValue); // World
   </script>
 </html>
