--- a/CH39/39_40.html
+++ b/CH39/39_40.html
@@ -4,8 +4,8 @@
     <div id="foo">Hello <span>world!</span></div>
   </body>
   <script>
-    // #foo 요소의 콘텐츠 영역 내의 HTML 마크업을 문자열로 취득한다.
-    console.log(document.getElementById("foo").innerHTML);
-    // "Hello <span>world!</span>"
+    // #foo 요소 노드의 모든 자식 노드가 제거되고 할당한 문자열이 텍스트로 추가된다.
+    // 이때 HTML 마크업이 파싱되지 않는다.
+    document.getElementById("foo").textContent = "Hi <span>there!</span>";
   </script>
 </html>
